# message-passing-for-da

./: .dockerignore  .gitignore  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
src/damp/: gp.py  graph.py  ground_truth_cache.py  inla_bridge.py  jax_utils.py  message_passing.py  metrics.py  multigrid.py  threedvar.py
src/experiments/: comparison_table.py  early_stopping_search.py  inla_demo.py  lr_c_grid_search.py  mp_demo.py  mp_multigrid_demo.py  plotting.py  temperature.py  threedvar_demo.py
tests/: ref_impl.py  test_graph.py  test_jax_utils.py  test_message_passing.py  test_multigrid.py  test_threedvar.py
