[tool.poetry]
name = "damp"
version = "0.1.0"
description = ""
authors = ["Oscar Key <oscar.t.key@gmail.com>", "Daniel Giles", "So Takao"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
jax = { extras = ["cuda12_pip"], version = "0.4.25" }
numpy = "^1.24.3"
scipy = "^1.10.1"
tqdm = "^4.65.0"
findiff = "^0.9.2"
scikit-learn = "^1.2.2"
chex = "^0.1.7"
pandas = "^2.1.0"
rpy2 = "^3.5.14"
jaxopt = "^0.8"
scikit-optimize = "^0.9.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
black = "^23.3.0"
isort = "^5.12.0"
ipykernel = "^6.23.2"
pytest = "^7.3.2"
pytest-env = "^0.8.2"
types-tqdm = "^4.66.0.2"
pytest-xdist = "^3.3.1"
networkx = "^3.1"

[tool.poetry.group.plotting.dependencies]
xarray = "^0.20.1"
cartopy = "^0.22.0"
cmocean = "^2.0"
matplotlib = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "jax_cuda"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
priority = "supplemental"

[tool.pytest.ini_options]
env = ["CUDA_VISIBLE_DEVICES=", "JAX_ENABLE_X64=True"]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
